FIX content alignment

--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -280,6 +280,7 @@ nav.navbar.megamenu {
 
 					>ul { 
 						align-content 	: flex-end;
+						align-items 	: flex-end;
 						background 		: white !important;
 						display   		: flex;
 						flex-direction 	: column;
